--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+:root {
+  --employee-card-blue: #365271;
+  --edit-icon-color: #ffc32f;
+  --edit-icon-hover-color: #0277bd;
+  --delete-icon-color: #e50201;
+  --green: #35933c;
+  --grey: #eaeaea;
+}
