--- a/src/components/employeeList/employeeList.module.scss
+++ b/src/components/employeeList/employeeList.module.scss
@@ -1,11 +1,12 @@
 // Mobile view: < 991.98px
-// Web view: > 992px
+// Web view: >= 992px
 
 .employeeListContainer {
     display: grid;
     grid-template-columns: auto;
     justify-content: center;
     gap: 1em;
+    padding: 1em 0 0 0;
 
     @media only screen and (min-width: 992px) {
         grid-template-columns: auto auto;
