--- a/src/components/ui/buttons/addEmployeeButton.module.scss
+++ b/src/components/ui/buttons/addEmployeeButton.module.scss
@@ -2,4 +2,5 @@
     background-color: var(--green) !important;
     color: #ffffff;
     font-weight: 700 !important;
+    background-color: transparent;
 }
